update 22042024 fixed scrollbar mobile register

--- a/assets/src/authentication/register/register.css
+++ b/assets/src/authentication/register/register.css
@@ -128,7 +128,6 @@ form {
     padding-top: 30px;
   }
   .logo_div_top {
-    height: 80px;
     width: 90%;
     padding: 16px 0;
   }
@@ -151,11 +150,6 @@ form {
   }
 }
 
-@media (max-height: 670px) {
-  .register_container {
-    height: calc(100vh - 248px);
-  }
-}
 
 @media (max-width: 560px) {
   .container {
